--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </div>
 
                     <div class="header-buttons">
-                        <a href="/conocenos.html" class="btn btn-primary btn-lg">Conocenos</a>
-                        <a href="/registro.html" class="btn btn-outline btn-lg">Registro</a>
+                        <a href="conocenos.html" class="btn btn-primary btn-lg">Conocenos</a>
+                        <a href="registro.html" class="btn btn-outline btn-lg">Registro</a>
                     </div>
 
                     <div class="stats">
